--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "author": "Danilo Woznica <danilowoz@gmail.com>",
   "license": "MIT",
-  "main": "dist/react-content-loader.cjs.js",
+  "main": "src/native/index.ts",
   "module": "dist/react-content-loader.es.js",
   "jsnext:main": "dist/react-content-loader.es.js",
   "types": "dist/web/index.d.ts",
@@ -26,8 +26,8 @@
     "svg"
   ],
   "files": [
-    "dist",
-    "native"
+    "src/shared",
+    "src/native"
   ],
   "sideEffects": false,
   "scripts": {
