--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-content-loader",
+  "version": "6.0.2",
   "description": "SVG-Powered component to easily create placeholder loadings (like Facebook cards loading)",
   "repository": {
     "type": "git",
